--- a/inventory/templates/inventory/record_list.html
+++ b/inventory/templates/inventory/record_list.html
@@ -1,21 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Record List</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <script>
-        function confirmDelete(event) {
-            if (!confirm("Are you sure you want to delete this record?")) {
-                event.preventDefault();
-            }
-        }
-    </script>
-</head>
-<body>
+{% extends 'inventory/base.html' %}
 
+{% block title %}Record List{% endblock %}
+
+{% block content %}
 <div class="container">
     <h1 class="mt-5">Record List</h1>
 
@@ -25,7 +12,12 @@
             <tr>
                 <th>#</th>
                 <th>Name</th>
+                <th>Reception Date</th>
+                <th>Quarter</th>
                 <th>Total Equipments</th>
+                <th>Repair Duration (Days)</th>
+                <th>Status</th>
+                <th>Message</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -34,7 +26,18 @@
             <tr>
                 <td>{{ forloop.counter }}</td>
                 <td>{{ record.name }}</td>
-                <td>{{ equipment_count.record.name|default:"0" }}</td>
+                <td>{{ record.reception_date }}</td>
+                <td>{{ record.quarter }}</td>
+                <td>{{ record.items_count }}</td>
+                <td>{{ record.repair_duration }}</td>
+                <td>{{ record.status }}</td>
+                <td>
+                    {% if record.message %}
+                        <div class="alert {% if record.repair_duration >= 75 and record.repair_duration <= 85 %}alert-warning{% elif record.repair_duration > 90 %}alert-danger{% else %}alert-info{% endif %}">
+                            {{ record.message }}
+                        </div>
+                    {% endif %}
+                </td>
                 <td>
                     <!-- Download Button -->
                     <a href="{% url 'download_record' record.pk %}" class="btn btn-primary btn-sm">Download</a>
@@ -51,9 +54,11 @@
     </table>
 </div>
 
-<!-- Bootstrap JS, Popper.js, and jQuery -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+<script>
+    function confirmDelete(event) {
+        if (!confirm("Are you sure you want to delete this record?")) {
+            event.preventDefault();
+        }
+    }
+</script>
+{% endblock %}
